--- a/styles/main.css
+++ b/styles/main.css
@@ -149,7 +149,7 @@ ul {
     display: none;
 }
 
-.profile-container:before{
+.profile-container:before {
     bottom: 100%;
     left: 57%;
     border: solid transparent;
@@ -198,7 +198,6 @@ ul {
 
 .categories {
     border-bottom: 1px solid var(--category-hover);
-
 }
 
 .category-list {
@@ -206,29 +205,87 @@ ul {
     text-align: center;
     height: 32px;
     line-height: 32px;
-
+    position: relative;
 }
-.category-list li{
+
+.category-list li {
     flex-grow: 1;
     font-size: 14px;
     font-weight: 600;
     color: #333;
+    
 }
 
-.category-list li:hover {
+.category-list > li:hover {
     border-bottom: 2px solid var(--primary-color);
 }
 
+.category-content {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 15px 18px;
+    border: 1px solid red;
+    overflow: hidden;
+    text-align: left;
+}
+
+.sub-category {
+    float: left;
+    width: 147px;
+    margin-bottom: 10px;
+    margin-right: 25px;  
+}
+
+.sub-category > a {
+    font-size: 15px;
+    color: #333;
+    font-weight: 600;
+}
+
+.sub-category li {
+    line-height: 21px;
+}
+
+.sub-category li a {
+    font-weight: normal;
+    font-size: 13px;
+    color: #666;
+}
+
+.sub-category a:hover {
+    border: none;
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+.campaign-container {
+    float: right;
+}
+
+.campaign-container a {
+    width: 264px;
+    height: 137px;
+    margin-bottom: 15px;
+    border: 0.8px solid #e7e7e7;
+}
+
+
+
+
 /* Products Page */
+
 .container-1200 {
     width: 1200px;
     margin: 0 auto;
 }
-.breadcrumb{
+
+.breadcrumb {
     display: flex;
     gap:15px;
     align-items: center;
     margin: 10px 0 15px 0;
 }
+
 
 
