--- a/styles/main.css
+++ b/styles/main.css
@@ -251,6 +251,7 @@ ul {
 .category-content {
   position: absolute;
   left: 0;
+  top: 33px;
   width: 100%;
   padding: 15px 18px;
   overflow: hidden;
@@ -298,7 +299,6 @@ ul {
 
 .campaign-container img {
   width: 100%;
-  
 }
 
 .campaign-container a {
@@ -306,7 +306,7 @@ ul {
     margin-bottom: 15px;
 }
 
-/* STORY SECTION BEGIN*/
+/* STORY SECTION BEGINS*/
 
 .stories{
     display: flex;
@@ -314,7 +314,6 @@ ul {
     text-align: center;
     margin-top: 20px;
 }
-
 
 .story-text{
     margin-top: 5px;
@@ -343,8 +342,102 @@ ul {
     color: var(--primary-color);
 }
 
-/* STORY SECTION END */
+/* STORY SECTION ENDS */
 
+
+/* COMPONENT BANNER SECTION STARTS*/
+
+.component-banner-container{
+    display: flex;
+    gap:20px;
+}
+
+.components{
+    width: 750px;
+}
+
+.component{
+    border-radius: 6px;
+    margin-bottom: 15px;
+    overflow: hidden;
+    box-shadow: 0 0 7px #d3d3d3;
+    border: 1px solid transparent;
+}
+
+.component-img{
+    width: 100%;
+    height: 217px;
+    display: block;
+    object-fit: cover;
+}
+
+.component-description{
+    display: flex;
+    align-items: center;
+    background-color: black;
+    transition: background-color 300ms ease-in-out;
+}
+
+.component-text, .hover-text{
+    display: inline-block;
+    padding: 0 17px;
+    color: white;
+    width: 50%;
+    font-size: 14px;
+    line-height: 38px;
+    font-weight: 600;
+}
+
+
+.component-text {
+    text-transform: uppercase;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow:hidden
+}
+
+.hover-text{
+    text-align: right;
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+}
+
+.hover-text svg{
+    margin-left: 7px;
+    line-height: 30px;
+}
+
+.component:hover .hover-text{
+    opacity: 1;
+}
+
+.component:hover .component-description{
+    background-color: var(--primary-color);
+}
+
+.component:hover {
+    border: 1px solid var(--primary-color);
+}
+
+.component:hover img{
+    transform: scale(1.015);
+    transition: transform 700ms ease-in-out;
+}
+
+.banners{
+    width: 310px;
+}
+
+.banner{
+    margin-bottom: 15px;
+}
+
+.banner-img{
+    border-radius: 6px;
+    display: block;
+    width: 100%;
+}
+/* COMPONENT BANNER SECTION ENDS */
 
 /* Products Page */
 
