--- a/styles/main.css
+++ b/styles/main.css
@@ -350,9 +350,9 @@ ul {
   padding: 6px 10px 6px 10px;
   border: 1px solid #e2e2e2;
   border-radius: 3px;
-  width: 175px;
+  width: 100%;
   height: 27px;
-  margin-top: 10px;
+  margin: 10px 0;
 }
 
 .brands input {
@@ -417,13 +417,13 @@ ul {
 }
 
 .price-min-max input {
-  padding: 6px 15px 6px 15px;
+  padding: 6px 8px;
   background: #fafafa;
   border: 1px solid #e2e2e2;
   border-radius: 3px;
-
   width: 58px;
   height: 27px;
+  font-size: 12px;
 }
 
 .price-min-max button {
@@ -437,11 +437,9 @@ ul {
 }
 
 .price-min-max input::placeholder {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
   line-height: 15px;
   color: #4b4b4b;
+  
 }
 
 .price-min-max {
@@ -454,6 +452,7 @@ ul {
 
 .priceSearch label {
   margin-left: 13px;
+  font-size: 12px;
 }
 
 .priceSearch form ul {
@@ -499,7 +498,7 @@ ul {
 .products {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content:flex-start;
   gap: 20px;
 }
 .product-detail {
@@ -510,7 +509,16 @@ ul {
   margin-top: 20px;
   flex: 0 22%;
   flex-direction: column;
+  position: relative;
+  overflow: hidden;
+ 
 }
+.product-card:hover img{
+transform: scale(1.015);
+transition: all 500ms;
+
+}
+
 .product-price {
   font-style: normal;
   font-weight: normal;
@@ -553,14 +561,33 @@ ul {
   border: 1px solid #ff671d;
   border-radius: 3px;
   padding: 4px 6px 3px 7px;
-  font-weight: normal;
   font-size: 12px;
   line-height: 15px;
   color: #666666;
+
 }
 .cheaper-price {
   color: var(--primary-color);
-  font-size: 16px;
+  font-size: 12px;
   font-family: "Oxygen", sans-serif;
   font-weight: 700;
+  
+}
+.wish-item{
+  width: 42px;
+  height: 42px;
+  background: #FFFFFF;
+  border-radius: 50%;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  top:10px;
+  right:11px;
+  z-index: 1;
+
+}
+.wish-item:hover svg path{
+  stroke: var(--primary-color);
 }
