--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,17 @@
+/*
+  ========================================
+  1- Fonts
+  ========================================
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+
+/*
+  ========================================
+  2- Variables
+  ========================================
+*/
 
 :root {
   --primary-color: #f27a1a;
@@ -12,6 +24,12 @@
   --background-all-site: #e5e5e5;
 }
 
+/*
+  ========================================
+  3- Basic Resets
+  ========================================
+*/
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,6 +39,7 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
   background: white;
+  padding-bottom: 200px;
 }
 
 a {
@@ -33,52 +52,72 @@ ul {
   list-style-type: none;
 }
 
+/*
+  ========================================
+  4- Containers
+  ========================================
+*/
+
 .container {
   width: 1080px;
   margin: 0 auto;
 }
-.container-1200 {
-  width: 1080px;
+
+.large-container {
+  width: 1200px;
   margin: 0 auto;
 }
 
-.header {
-    position: relative;
-    background-color: white;
+/*
+  ========================================
+  5- Page Header
+  ========================================
+*/
+
+.page-header {
+  z-index: 6;
+  position: relative;
+  background-color: white;
 }
 
-.header-banner-container {
-    display: block;
-}
+/* 5.1- Header Banner */
  
 .header-banner {
   height: 65px;
+  width: 100%;
   background: linear-gradient(to right, rgb(30,223,242) 30%, rgb(9,191,223) 70%);
 }
 
+.header-banner a {
+  display: inline-block;
+  width: 100%;
+}
+
 .header-banner img {
-    display: block;
-    margin: 0 auto;
-    object-fit: contain;
+  display: block;
+  margin: 0 auto;
+  object-fit: contain;
 }
 
-.header-main-links {
-    display: flex;
-    justify-content: flex-end;
-    gap: 30px;
-    padding-top: 5px;
+/* 5.2- Header Main */
+
+.header-links {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+  padding-top: 5px;
 }
 
-.header-main-links a {
+.header-links a {
   font-size: 0.75rem;
   color: var(--header-top-link);
 }
 
-.header-main-links a:hover {
+.header-links a:hover {
   color: var(--header-top-link-hover);
 }
 
-.header-main-content {
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -88,7 +127,9 @@ ul {
     background-color: white;
 }
 
-.search-box-container {
+/* 5.2.1- Search Box */
+
+.search-area {
   width: 600px;
   color: #333;
   background-color: #f3f3f3;
@@ -105,12 +146,21 @@ ul {
   outline: 0;
 }
 
+.search-box:focus {
+  border: 2px solid var(--primary-color);
+  transition: all 300ms ease-in-out;
+}
+
+.search-box:focus + .search-history {
+  display: block;
+}
+
 .search-history {
     display: none;
     position: absolute;
     top: 34px;
     width: 100%;
-    z-index: 4;
+    z-index: 10;
     background-color: white;
     border: 2px solid var(--primary-color);
     padding: 17px;
@@ -135,16 +185,6 @@ ul {
     margin-bottom: 5px;
 }
 
-.search-box:focus {
-    border: 2px solid var(--primary-color);
-    transition: all 300ms ease-in-out;
-}
-
-.search-box:focus ~ div {
-    display: block;
-}
-
-
 .search-button {
   border: 0;
   position: absolute;
@@ -155,18 +195,20 @@ ul {
   cursor: pointer;
 }
 
-.account-list {
+/* 5.2.2- Account List */
+
+.account-nav {
     height: 40px;
 }
 
-.account-list ul {
+.account-nav ul {
     width: 290px;
     height: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.account-item {
+.account-nav-item {
     display: inline-block;
     font-size: 0.75rem;
     position: relative;
@@ -174,21 +216,21 @@ ul {
     align-items: center;
 }
 
-.account-item-link {
+.account-nav-item a {
   display: flex;
   align-items: center;
 }
 
-.account-item-link span {
+.account-nav-item a span {
   padding-left: 5px;
   color: var(--account-item);
 }
 
-.account-item a:hover span {
+.account-nav-item a:hover span {
   color: var(--account-item-hover);
 }
 
-.account-item a:hover svg path {
+.account-nav-item a:hover svg path {
   fill: var(--account-item-hover);
 }
 
@@ -201,7 +243,7 @@ ul {
     top: 40px;
     right: -67px;
     height: 289px;
-    z-index: 2;
+    z-index: 15;
     width: 196px;
     border: 1px solid var(--profile-container);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.07);
@@ -263,9 +305,15 @@ ul {
   color: var(--primary-color);
 }
 
+/*
+  ========================================
+  6- Categories
+  ========================================
+*/
+
 .categories {
-    border-bottom: 1px solid var(--category-hover);
-    background-color: white;
+  border-bottom: 1px solid var(--category-hover);
+  background-color: white;
 }
 
 .category-list {
@@ -304,22 +352,23 @@ ul {
   padding: 15px 18px;
   overflow: hidden;
   text-align: left;
-  z-index: 10;
+  z-index: 20;
   display: none;
   grid-template-columns: repeat(5, 1fr) 275px;
   background-color: #fff;
 }
 
 .black-out {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    opacity: 0;
-    pointer-events: none;
-    background-color: rgba(0, 0, 0, 0.3);
-    transition: opacity 500ms ease-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+  opacity: 0;
+  pointer-events: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: opacity 500ms ease-out;
 }
 
 .sub-category {
@@ -417,11 +466,11 @@ ul {
 }
 
 .component{
-    border-radius: 6px;
-    margin-bottom: 15px;
-    overflow: hidden;
-    box-shadow: 0 0 7px #d3d3d3;
-    border: 1px solid transparent;
+  border-radius: 6px;
+  margin-bottom: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 7px #d3d3d3;
+  border: none;
 }
 
 .component-img{
@@ -475,7 +524,7 @@ ul {
 }
 
 .component:hover {
-    border: 1px solid var(--primary-color);
+    outline: 1px solid var(--primary-color);
 }
 
 .component:hover img{
@@ -500,10 +549,6 @@ ul {
 
 /* Products Page */
 
-.container-1200 {
-  width: 1200px;
-  margin: 0 auto;
-}
 .breadcrumb {
   display: flex;
   gap: 15px;
