--- a/styles/main.css
+++ b/styles/main.css
@@ -125,6 +125,8 @@ ul {
   margin-top: 11px;
   padding-bottom: 11px;
   background-color: white;
+  position: sticky;
+  top: 0;
 }
 
 /* 5.2.1- Search Box */
@@ -481,7 +483,7 @@ ul {
   width: 100%;
   height: 217px;
   display: block;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .component-description{
@@ -544,11 +546,60 @@ ul {
   margin-bottom: 15px;
 }
 
-.banner-img{
+.banner a {
+  position: relative;
   border-radius: 6px;
   display: block;
-  width: 100%;
+  height: 304px;
+  background-image: url(https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png);
 }
+
+.banner-img {
+  position: absolute;
+  top: 81px;
+  left: 28px;
+  z-index: -1;
+  width: 140px;
+  
+}
+
+.banner-info {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 110px;
+  left: 187px;
+}
+
+.banner-info span {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 120px;
+  text-align: center;
+}
+
+.banner-info span:nth-child(1) {
+  font-size: 17px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.banner-info span:nth-child(3) {
+  font-size: 16px;
+  line-height: 15px;
+  text-decoration: line-through;
+}
+
+.banner-info span:nth-child(4) {
+  font-size: 25px;
+  line-height: 20px;
+  display: inline-block;
+  margin: 5px 0;
+  font-weight: bold;
+}
+
 /* COMPONENT BANNER SECTION ENDS */
 
 /* Products Page */
@@ -574,6 +625,8 @@ ul {
   font-size: 13px;
   margin: 10px 0px;
 }
+
+
 
 #more-show-button {
   color: var(--primary-color);
@@ -603,6 +656,10 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.filter-sidebar a:hover {
+  color: #999;
 }
 
 .opportunity-product label {
