--- a/styles/main.css
+++ b/styles/main.css
@@ -125,8 +125,6 @@ ul {
   margin-top: 11px;
   padding-bottom: 11px;
   background-color: white;
-  position: sticky;
-  top: 0;
 }
 
 /* 5.2.1- Search Box */
@@ -236,6 +234,8 @@ ul {
   fill: var(--account-item-hover);
 }
 
+/* 5.2.3- Account List */
+
 .profile:hover div {
   display: block;
 }
@@ -255,7 +255,8 @@ ul {
   display: none;
 }
 
-.profile-container:after, .profile-container:before {
+.profile-container:after, 
+.profile-container:before {
 	bottom: 100%;
 	left: 50%;
 	border: solid transparent;
@@ -361,19 +362,7 @@ ul {
   background-color: #fff;
 }
 
-.black-out {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 2;
-  opacity: 0;
-  pointer-events: none;
-  background-color: rgba(0, 0, 0, 0.3);
-  transition: opacity 500ms ease-out;
-}
-
+/* Category Item Start*/
 .sub-category {
   width: 147px;
   margin-bottom: 10px;
@@ -405,6 +394,10 @@ ul {
   text-decoration: underline;
 }
 
+/* Category Item End*/
+
+/* Campaign Container Start*/
+
 .campaign-container {
   width: 275px;
 }
@@ -419,6 +412,21 @@ ul {
 
 .campaign-container a:first-child {
   margin-bottom: 15px;
+}
+
+/* Campaign Container End*/
+
+.black-out {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+  opacity: 0;
+  pointer-events: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: opacity 500ms ease-out;
 }
 
 /* STORY SECTION BEGINS*/
@@ -462,6 +470,8 @@ ul {
 
 /* COMPONENT BANNER SECTION STARTS*/
 
+
+/* Components Start */
 .component-banner-container{
   display: flex;
   gap:20px;
@@ -476,7 +486,6 @@ ul {
   margin-bottom: 15px;
   overflow: hidden;
   box-shadow: 0 0 7px #d3d3d3;
-  border: none;
 }
 
 .component-img{
@@ -530,14 +539,16 @@ ul {
 }
 
 .component:hover {
-  outline: 1px solid var(--primary-color);
+  box-shadow: 0 0 0 1pt var(--primary-color);
 }
 
 .component:hover img{
   transform: scale(1.015);
   transition: transform 700ms ease-in-out;
 }
+/* Components End */
 
+/* Banners Start */
 .banners{
   width: 310px;
 }
@@ -600,6 +611,7 @@ ul {
   font-weight: bold;
 }
 
+/* Banners End */
 /* COMPONENT BANNER SECTION ENDS */
 
 /* Products Page */
@@ -915,8 +927,12 @@ ul {
   overflow: hidden;
 }
 
+.product-card img {
+  transition: transform 0.5s ease;
+}
+
 .product-card:hover img{
-  transform: scale(1.015);
+  transform: scale(1.03);
   transition: all 500ms;
 }
 
