favicon and product page updated

--- a/styles/main.css
+++ b/styles/main.css
@@ -921,14 +921,17 @@ ul {
 .product-card {
   display: flex;
   margin-top: 20px;
-  flex: 1 20%;
+  flex: 0 20%;
   flex-direction: column;
   position: relative;
-  overflow: hidden;
 }
 
 .product-card img {
   transition: transform 0.5s ease;
+}
+.product-image {
+  overflow: hidden;
+  height: 350px;
 }
 
 .product-card:hover img{
